# medichaser

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  appointments.example.toml  appointments.toml  docker-compose.tests.yml  docker-compose.yml  fly.toml  medichaser.py  mediczuwacz.py  medihunter_notifiers.py  notifications.py  pyproject.toml  setup.py  tests.py
.github/workflows/: docker_build.yml  docker_build_and_tests.yml  type_check.yml
